# SecondBrainBot

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
files/: template.ics
scripts/: Build.sh  InitialSetup
src/: main.cpp
src/DailyService/include/: DailyService.hpp
src/DailyService/src/: DailyService.cpp
src/DatabaseService/include/: DatabaseService.hpp
src/DatabaseService/src/: DatabaseService.cpp
